feat: :construction: Construcion de home

--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    
+    <header>
+        <div class="caja__header">
+            <h4>Hello, Welcome</h4>
+            <p>Albert Stevano</p>
+        </div>
+        <div class="imagen__header">
+            <img src="storage/img/Profile.png" alt="">
+        </div>
+    </header>
+    <main>
+        <div class="caja1__main">
+            <div class="navegador">
+                <i class='bx bx-search'></i>
+                <span>Search clothes...</span>
+            </div>
+            <div class="opciones">
+                <i class='bx bx-cog' ></i>
+            </div>
+        </div>
+        <div class="caja2__main">
+            <div class="items__1"><span>All items</div>
+            <div class="items__2"><span>Dresss</span></div>
+            <div class="items__3"><span>Hat</span></div>
+            <div class="items__4"><span>Watch</span></div>
+        </div>
+        <div class="caja3__main">
+            <div class="imagenes">
+                <img src="storage/img/Frame 10.png" alt="">
+            </div>
+            <div class="imagenes">
+                <img src="storage/img/Frame 10.png" alt="">
+            </div>
+            <div class="imagenes">
+                <img src="storage/img/Frame 10.png" alt="">
+            </div>
+            <div class="imagenes">
+                <img src="storage/img/Frame 10.png" alt="">
+            </div>
+            <div class="imagenes">
+                <img src="storage/img/Frame 10.png" alt="">
+            </div>
+            <div class="imagenes">
+                <img src="storage/img/Frame 10.png" alt="">
+            </div>
+        </div>
+    </main>
 </body>
 </html>
